	
	- Sweepstakes are rejiggered so you can run the report either for each
	  individual sub-category or you can see the whole combined points. So
	  places like NY state which count 3 entries from 3 separate groupings,
	  should create a sweep set for Address, Interp & Reading, put the events
	  into them, and set it to limit to 2 entries; the overall report will then
	  show the top 6 entries, 2 each from each sweep set.
	
	- School reports, the printing of which (especially printing all the
	  schools) used to take until the heat death of the universe, now are
	  considerably faster (usually take 1-2 minutes for an ordinary tournament)

	- Pairings and schematics are fixed so that tournaments in IE using names
	  instead of codes should be able to display & print schematics correctly

==CHANGES RELEASED 1.9.13==

	- You can now switch the sides of debaters from the panel view screen if
	  things should get messed up.

	- There's a bracket!  CAT enabled tournaments, when they post elim round
	  results, will also be posting an elimination round bracket which will
	  auto-populate under the Results tab, click on the division, and click
	  Bracket.

	- Fixed the XML exporter to never export a NULL value and instead replace
	  them with 0s because Windows throws a hissy fit when there are null
	  values for some reason.

	- Fixed a bug where if a free number of judges was set it was being added
	  before, not after, mandatory minimums/maximums

	- Fixed an issue where the email/text blaster did not show a debater's
	  opponent in elim rounds.

	- Repaneling an event/series of events, or dumping rounds and judges, will
	  now log a message to the Change Log visible under Entries -> Change Log
	  -> Show Tabulation Log.  That way when that sort of dopey person who you
	  know screws things up regularly but you have to keep in tab anyway
	  because otherwise s/he'll never shut up about it disavows any knowledge